syntax = "proto3";

package auth_service_package;

service AuthRpc {
  rpc SignIn (UserDto) returns (TokensDto);
  rpc SignUp (UserDto) returns (TokensDto);
  rpc RefreshToken (TokensDto) returns (TokensDto);
  rpc UpdateUser (UserDto) returns (UserDto);
  rpc DeleteUser (RequestDto) returns (ResponseDto);
  rpc FetchUser (RequestDto) returns (UserDto);
  rpc FindUsers (FindDto) returns (ListUsersDto);
}

message ListUsersDto {
  repeated UserDto users = 1;
}

message FindDto {
  string key = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message UserDto {
  string id = 1;
  string username = 2;
  string email = 3;
  optional string password = 4;
}

message TokensDto {
  string access_token = 1;
  string refresh_token = 2;
}

message RequestDto {}

message ResponseDto {
  string message = 1;
}
